# resonantdust_shared

./: .gitignore  AGENTS.md  Cargo.toml  compose.yml
codec/: Cargo.toml
codec/src/: card_model.rs  flags.rs  lib.rs  packed.rs  plan.rs  stacking.rs
data/: Cargo.toml
data/src/: bits.rs  bridge.rs  card_model.rs  defs.rs  flags.rs  inspect.rs  lib.rs  loader.rs  locales.rs  packed.rs  plan.rs  recipe_state.rs  validate.rs
dsl/: Cargo.toml
dsl/src/: bridge.rs  defs.rs  inspect.rs  lib.rs  loader.rs  noise.rs  parser.rs  recipe.rs  resolve.rs  vm.rs  worldgen.rs
pkg/: resonantdust_shared.d.ts  resonantdust_shared.js  resonantdust_shared_bg.wasm  resonantdust_wasm.js  resonantdust_wasm_bg.wasm  resonantdust_wasm_bg.wasm.d.ts
protocol/: Cargo.toml
protocol/src/: lib.rs  protocol.rs
rules/: Cargo.toml
rules/src/: dsl_recipe.rs  lib.rs  stacking.rs
src/: lib.rs
state/: Cargo.toml
state/src/: lib.rs  recipe_state.rs  stack.rs
