[package]
name = "resonantdust-data"
version = "0.1.0"
edition = "2021"
publish = false
description = "Transitional facade re-exporting the split shared crates (codec / dsl / state / protocol) under the old module paths, so existing `use resonantdust_data::X` keeps compiling while consumers migrate to the member crates. Deleted once narrowed (see docs/shared_crate_split)."

[lib]
name = "resonantdust_data"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
# Re-export the wire protocol — exactly as before, the gateway + client enable
# this and the SpacetimeDB modules don't (so they never pull serde_json).
protocol = ["dep:resonantdust-protocol"]

[dependencies]
resonantdust-codec = { path = "../codec" }
resonantdust-dsl = { path = "../dsl" }
resonantdust-state = { path = "../state" }
resonantdust-protocol = { path = "../protocol", optional = true }
